Version 1.14 - 2017-11-09
* BUG#7371 Do not allow writing on health complement if the party is social security dependent. Display main complement health in this case.
* BUG#7293 Avoid to direct edit health care complement setting from party view

Version 1.12 - 2017-04-28

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06

Version 1.6 - 2015-12-23

Version 1.4 - 2015-05-29
* FEA#0000 Use SESAM file to create french fund

Version 1.3 - 2015-01-22
* FEA#0000 Add check on insured / dependant

Version 1.2 - 2014-07-01
* FEA#0000 Changelog file creation