@@ -3,7 +3,10 @@
 this repository contains the full copyright notices and license terms. -->
 <data>
     <xpath expr="/form/notebook/page[@id='general']" position="inside">
-        <label name="main_health_complement"/>
-        <field name="main_health_complement" colspan="4"/>
+        <newline/>
+        <group id="health_complement" colspan="6" col="6">
+            <label name="main_health_complement"/>
+            <field name="main_health_complement"/>
+        </group>
     </xpath>
 </data>
